# stm32-bootie

./: LICENSE  README.md  make_blinky_bin.sh
blblinky/: .gdbinit  Cargo.toml  memory.x
blblinky/src/: main.rs
bootloader/: .gdbinit  Cargo.toml  memory.x
bootloader/src/: blinky_arr.rs  main.rs
file_reader/: Cargo.toml
file_reader/src/: main.rs
