[package]
authors = ["Christian Maniewski <code@chmanie.com>"]
edition = "2021"
readme = "README.md"
name = "blblinky"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[package.metadata]
chip = "STM32F401RETx"

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.14"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"

[dependencies.stm32f4xx-hal]
features = ["stm32f401", "rt"]
version ="0.10.0"

[profile.release]
debug = true # symbols are nice and they don't increase the size on Flash
