[package]
authors = ["Christian Maniewski <code@chmanie.com>"]
edition = "2021"
readme = "README.md"
name = "bootloader"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[package.metadata]
chip = "STM32F401RETx"

[dependencies]
embedded-hal = "0.2"
nb = "1"
cortex-m = "0.7"
cortex-m-rt = ">=0.6.15, <0.8"
cortex-m-semihosting = "0.3"
panic-semihosting = "0.5"

[dependencies.stm32f4xx-hal]
version = "0.10.1"
features = ["rt", "stm32f401"] # replace the model of your microcontroller here

[profile.release]
debug = true # symbols are nice and they don't increase the size on Flash
